jellyfin/jellyfin-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - jellyfin.homeserver.local

  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
